# ScannerClient

./: .gitignore  CMakeLists.txt  README.md  scannerclient.rc
docs/: DevelopmentNotes.odt  VLC_trace_with_scanner.pcapng
src/audio/: AudioBuffer.cpp  AudioBuffer.h  ISC_Audio.h  SC_RTaudio.cpp  SC_RTaudio.h
src/cmake/: macros.cmake
src/config/: SC_CONFIG.cpp  SC_CONFIG.h  WX_ConfigImpl.cpp  WX_ConfigImpl.h
src/control/: SControl.cpp  SControl.h
src/gui/: SCFrame.cpp  SCFrame.h  SettingsDialog.cpp  SettingsDialog.h  scApp.cpp  scApp.h
src/include/scannerclient/: MediaDescription.h  RTPSession.h  RTSPRequest.h  RTSPResponse.h  RTSPSession.h  SessionDescription.h  TCPSocket.h  UDPSocket.h  sc.h
src/network/: MediaDescription.cpp  MediaDescription.h  RTPSession.cpp  RTPSession.h  RTSPRequest.cpp  RTSPRequest.h  RTSPResponse.cpp  RTSPResponse.h  RTSPSession.cpp  RTSPSession.h  SessionDescription.cpp  SessionDescription.h  Socket.cpp  Socket.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h  g711.cpp  g711.h  response_test_data.h
src/status/: ScannerStatus.cpp  ScannerStatus.h
src/tests/: rtsp_test.cpp  sc_test.cpp  tcp_client.cpp  udp_client.cpp
src/utils/: utils.cpp  utils.h
